# lenny

./: .env.example  .gitignore  .pre-commit-config.yaml  Justfile  README.md  devcontainer.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  starship.toml
.husky/: pre-commit
backend/: Dockerfile  Makefile  README_FORMATTING.md  celerybeat-schedule  config.py  database.py  entrypoint.sh  esi_client.py  init_database.py  main.py  models.py  pyproject.toml  sde_service.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 3a78ca2ad280_initial_schema_with_indexes.py  5b47058a4173_add_unique_constraint_to_market_history_.py  6c65d5fb3c1b_add_unique_constraint_to_market_history.py  (+2 more)
backend/llm_providers/: __init__.py  base.py  factory.py  gemini_provider.py  openai_provider.py  system_prompt.txt
backend/mcp/: server.py
backend/mcp_handlers/: router.py  server.py  tools.py
backend/routers/: auth.py  chat.py  market.py
docs/: TECHNICAL_SPECIFICATION.md  TECH_DEBT.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  ChatWidget.jsx  EveIcon.jsx  ItemFilterWidget.jsx  LocationBrowser.jsx  MarketDashboard.jsx  main.jsx
scripts/: backend-install.sh  db-init.sh  db-migrate.sh  db-revision.sh  db-stamp.sh  dev-setup.sh  devcontainer-setup.sh  format.sh  frontend-install.sh  frontend-prepare.sh  lint.sh  pre-commit.sh  run-all.sh  run-backend.sh  run-frontend.sh  run-worker-no-beat.sh  run-worker.sh  setup.sh
